# supermarket-rag

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  start.py  start_simple.py  start_working.py  test_simple_rag.py
data/: supermarket_dataset.csv
plan/: PLAN.md  supermarket-rag-ui.html
src/: __init__.py  config.py
src/api/: __init__.py  google_hf_main.py  main.py  models.py  price_updater.py  simple_main.py  streaming.py
src/chains/: __init__.py  budget_optimizer.py  free_llm.py  general_rag.py  google_hf_chains.py  intent_classifier.py  meal_planner.py  nutrition_advisor.py  product_search.py  rag_meal_planner.py  simple_rag_planner.py
src/ingest/: __init__.py  doc_builder.py  embedder.py  free_embedder.py  google_hf_embedder.py  loader.py  simple_embedder.py
src/retrieval/: __init__.py  hybrid_retriever.py  query_rewriter.py  reranker.py
src/vectorstore/: __init__.py  chroma_store.py  schema.py
